# ChangeLog for dev-perl/Task-Weaken
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Task-Weaken/ChangeLog,v 1.13 2008/09/30 14:54:05 tove Exp $

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Task-Weaken-0.99.ebuild,
  -Task-Weaken-1.00.ebuild, Task-Weaken-1.02.ebuild:
  Cleanup

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org> Task-Weaken-1.02.ebuild:
  sparc/x86 stable

*Task-Weaken-1.02 (28 Apr 2008)

  28 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Task-Weaken-1.02.ebuild:
  Version bump

  20 Feb 2008; nixnut <nixnut@gentoo.org> Task-Weaken-1.01.ebuild:
  Added ~ppc wrt bug 207343

  27 Dec 2007; Andrej Kacian <ticho@gentoo.org> Task-Weaken-1.01.ebuild:
  Stable on x86.

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Task-Weaken-1.01.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Task-Weaken-1.01.ebuild:
  sparc stable

*Task-Weaken-1.01 (26 Oct 2007)

  26 Oct 2007; Christian Hartmann <ian@gentoo.org> +Task-Weaken-1.01.ebuild:
  Version bump

*Task-Weaken-1.00 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +Task-Weaken-1.00.ebuild:
  Version bump

  15 Oct 2006; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Keywording amd64, sparc stable

  14 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  Task-Weaken-0.99.ebuild:
  Marking amd64, sparc stable.

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Task-Weaken-0.99.ebuild:
  Adding perl dep; fixed DEPEND

*Task-Weaken-0.99 (23 Jun 2006)

  23 Jun 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +Task-Weaken-0.99.ebuild:
  New dep for dev-perl/PPI
