@@ -1,6 +1,8 @@
 DIST Task-Weaken-1.01.tar.gz 22805 RMD160 a4d2daee2343c745d63b9adb6693c24534953e33 SHA1 42a8b4706c9c508ec8d8df9efd45e33f2b72ed37 SHA256 3e7110ad78ad009bf160b569d35225f97bf7d4537b280cc9329c7e3b84f36564
 DIST Task-Weaken-1.02.tar.gz 23200 RMD160 9647f383a069f6c979bbb698e3dd9ff2fef86499 SHA1 8859be58d47c785e25513f807436fa79a4c95a16 SHA256 9f97350fd50bd29c04ac6bd261c8aa439c3b2751dcadc765ad4c2f4e439bc981
+DIST Task-Weaken-1.03.tar.gz 26337 RMD160 5b1298166ba38715e0f9f43f8ce8bfb29b8706da SHA1 1a958220f92ac11dd4548c9fe405ca9c9a0ffdc9 SHA256 fb1de84c81c523147f4007c559d3ac38fa474b2999f68b14387bb67e061ca8d0
 EBUILD Task-Weaken-1.01.ebuild 567 RMD160 10204f2e80b065f8c2981f0dc6cbf2476343ce8c SHA1 05a78ba588c7cf35c21dbfcdbf2a95bf5583dc13 SHA256 0e642432144a978e5ba5df7abb89e0f9c65abcf69ce9fd69c7c6e2688b23648e
 EBUILD Task-Weaken-1.02.ebuild 473 RMD160 158693bd9b738521b955da519164f609172f5420 SHA1 292563a458b7430f3b5081b47c600ae78c6ae31b SHA256 585953544ced326b693efa94888d5f33a527ba8969848a691acc2e04fed6907a
-MISC ChangeLog 1672 RMD160 fcaec77843a71826710bb486aadcacbd98a18dad SHA1 bdf7bb993910cb9737ff4673b927aee3a15c3bc5 SHA256 7db932634293f6701e379a8cdb313de90f3659939e0be5d06550698328b41326
+EBUILD Task-Weaken-1.03.ebuild 425 RMD160 4554ab1a71d7715d68babcece237098128d2de6e SHA1 840e16679ec34fcf60787930f59d3bcdf8c0deb3 SHA256 a91266db27e0d8a2b2252a69b2564d33ed456327f455274b31cd711cd56eeea6
+MISC ChangeLog 1795 RMD160 5122ddeeec748ee274d5ca10002196522f831b5a SHA1 ab92a776522d69bbe9a6e45399577e10d1fed219 SHA256 9e3c7406f9a77b05e5ed3ddfff764c313204811a53bd435231f04c1cafdd6663
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
