@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Task-Weaken/Task-Weaken-1.03.ebuild,v 1.1 2009/06/30 06:17:38 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=ADAMK
+inherit perl-module
+
+DESCRIPTION="Ensure that a platform has weaken support "
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-macos ~sparc-solaris"
+IUSE=""
+
+SRC_TEST="do"
